--- a/bus_booking/src/main/resources/application.properties
+++ b/bus_booking/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bus_booking
-#spring.datasource.url=jdbc:mysql://localhost:3306/newbusbookdb
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=root
-#
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/newbusbookdb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=rachit123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
